--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,16 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"]
+    "presets": ["@babel/preset-env", "@babel/preset-react"],
+    "plugins": [
+        [
+          "babel-plugin-root-import",
+          {
+            "paths": [
+              {
+                "rootPathSuffix": "src",
+                "rootPathPrefix": "~"
+              }
+            ]
+          }
+        ]
+      ]
 }
