--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "babel-loader": "^9.1.2",
+        "babel-plugin-root-import": "^6.6.0",
         "css-loader": "^6.7.3",
         "eslint": "^8.37.0",
         "eslint-config-airbnb-typescript": "^17.0.0",
