--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "hamburger-react": "^2.5.0",
         "keycloak-js": "^17.0.0",
         "react": "^18.2.0",
+        "react-animation": "^1.2.2",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.9.0",
         "react-scripts": "5.0.1",
