--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     "settings": {
         "import/resolver": {
             "node": {
-                "moduleDirectory": ["node_modules", "src/"]
+                "moduleDirectory": ["node_modules/", "src/"]
             }
         }
     },
