--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react": "^18.2.0",
         "react-animation": "^1.2.2",
         "react-dom": "^18.2.0",
+        "react-otp-input": "^3.0.1",
         "react-router-dom": "^6.9.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4",
