--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
         "hamburger-react": "^2.5.0",
         "keycloak-js": "^17.0.0",
         "react": "^18.2.0",
+        "react-animated-components": "^4.0.0",
         "react-animation": "^1.2.2",
         "react-dom": "^18.2.0",
         "react-otp-input": "^3.0.1",
         "react-router-dom": "^6.9.0",
         "react-scripts": "5.0.1",
+        "react-toastify": "^9.1.2",
         "web-vitals": "^2.1.4",
         "yup": "^1.1.1"
     },
