--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
         "react-animated-components": "^4.0.0",
         "react-animation": "^1.2.2",
         "react-dom": "^18.2.0",
+        "react-images-uploading": "^3.1.7",
         "react-otp-input": "^3.0.1",
         "react-router-dom": "^6.9.0",
         "react-scripts": "5.0.1",
         "react-toastify": "^9.1.2",
+        "rxjs": "^7.8.1",
         "web-vitals": "^2.1.4",
         "yup": "^1.1.1"
     },
