--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "yup": "^1.1.1"
     },
     "scripts": {
-        "start": "webpack-dev-server",
+        "start": "webpack-dev-server --open",
         "build": "webpack --mode production",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
