--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "bootstrap": "^5.2.3",
         "formik": "^2.2.9",
         "hamburger-react": "^2.5.0",
+        "js-cookie": "^3.0.5",
+        "jwt-decode": "^3.1.2",
         "keycloak-js": "^17.0.0",
         "react": "^18.2.0",
         "react-animated-components": "^4.0.0",
