--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-otp-input": "^3.0.1",
         "react-router-dom": "^6.9.0",
         "react-scripts": "5.0.1",
+        "react-scroll": "^1.8.9",
         "react-toastify": "^9.1.2",
         "rxjs": "^7.8.1",
         "web-vitals": "^2.1.4",
