--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-scroll": "^1.8.9",
         "react-toastify": "^9.1.2",
         "rxjs": "^7.8.1",
+        "typeface-inter": "^3.18.1",
         "web-vitals": "^2.1.4",
         "yup": "^1.1.1"
     },
