--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@emotion/styled": "^11.10.6",
         "@mui/icons-material": "^5.11.11",
         "@mui/material": "^5.11.15",
+        "@mui/x-date-pickers": "^6.4.0",
         "@react-google-maps/api": "^2.18.1",
         "@react-keycloak/web": "^3.4.0",
         "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +15,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.5",
         "bootstrap": "^5.2.3",
+        "dayjs": "^1.11.7",
         "formik": "^2.2.9",
         "hamburger-react": "^2.5.0",
         "js-cookie": "^3.0.5",
